--- a/questao02.html
+++ b/questao02.html
@@ -1,14 +1,18 @@
 <!--
-Questão 02
-IFCE - Instituto Federal do Ceará - Campus Tianguá-CE
-Nome: Arântia Mota;  Danilo Cardoso;  José Almir
-Disciplina: Desenvolvimento Web
-7º Semestre (Bacharelado em Ciência da Computação) - 2021.1 
+  Questão 02
+  IFCE - Instituto Federal do Ceará - Campus Tianguá-CE
+  Nome: Arântia Mota;  Danilo Cardoso;  José Almir
+  Disciplina: Desenvolvimento Web
+  7º Semestre (Bacharelado em Ciência da Computação) - 2021.1 
 -->
-<html>
-  <head>
-    <title>Questão 02</title>
-    <meta charset="utf-8" />
-  </head>
-  <body></body>
-</html>
+
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Shopping da Informática S.A</title>
+
+  </body>
