--- a/questao02.html
+++ b/questao02.html
@@ -15,4 +15,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shopping da Informática S.A</title>
 
-  </body>
+</head>
+
+<body>
+
+  <header>
+    <h1>Shopping da Informática S.A</h1>
+  </header>
+
+  <table class="txt-center" border="0" cellpadding="5" bordercolor="#dddddd" summary="Tabela com itens da loja">
+    <th>/</th>
+    <tr>
+      <td>/</td>
+      <td>/</td>
+      <td>/</td>
+      <td>/</td>
+    </tr>
+    <tr>
+      <td>/</td>
+      <td>/</td>
+      <td>/</td>
+      <td>/</td>
+    </tr>
+</body>
