Atualização do layout da tabela

--- a/questao02.html
+++ b/questao02.html
@@ -23,18 +23,33 @@
     <h1>Shopping da Informática S.A</h1>
   </header>
 
-  <table class="txt-center" border="0" cellpadding="5" bordercolor="#dddddd" summary="Tabela com itens da loja">
-    <th>/</th>
+  <table class="txt-center" border="1" cellpadding="5" bordercolor="#dddddd" summary="Tabela com itens da loja">
+    <th colspan="4">Shopping da Informática S.A</th>
     <tr>
+      <td rowspan="6">/</td>
       <td>/</td>
+      <td rowspan="6">/</td>
       <td>/</td>
+    </tr>
+    <tr>
       <td>/</td>
       <td>/</td>
     </tr>
     <tr>
       <td>/</td>
       <td>/</td>
+    </tr>
+    <tr>
       <td>/</td>
       <td>/</td>
     </tr>
+    <tr>
+      <td>/</td>
+      <td>/</td>
+    </tr>
+    <tr>
+      <td>/</td>
+      <td>/</td>
+    </tr>
+
 </body>
