Atualização do layout da tabela

--- a/questao02.html
+++ b/questao02.html
@@ -25,6 +25,34 @@
 
   <table class="txt-center" border="1" cellpadding="5" bordercolor="#dddddd" summary="Tabela com itens da loja">
     <th colspan="4">Shopping da Informática S.A</th>
+    <!--Seção 1 da tabela-->
+    <tr>
+      <td rowspan="6">/</td>
+      <td>/</td>
+      <td rowspan="6">/</td>
+      <td>/</td>
+    </tr>
+    <tr>
+      <td>/</td>
+      <td>/</td>
+    </tr>
+    <tr>
+      <td>/</td>
+      <td>/</td>
+    </tr>
+    <tr>
+      <td>/</td>
+      <td>/</td>
+    </tr>
+    <tr>
+      <td>/</td>
+      <td>/</td>
+    </tr>
+    <tr>
+      <td>/</td>
+      <td>/</td>
+    </tr>
+    <!--Seção 2 da tabela-->
     <tr>
       <td rowspan="6">/</td>
       <td>/</td>
