--- a/questao02.html
+++ b/questao02.html
@@ -23,61 +23,49 @@
     <h1>Shopping da Informática S.A</h1>
   </header>
 
-  <table class="txt-center" border="1" cellpadding="5" bordercolor="#dddddd" summary="Tabela com itens da loja">
+  <table class="txt-center" border="1" cellpadding="10" bordercolor="#ffffff" summary="Tabela com itens da loja">
     <th colspan="4">Shopping da Informática S.A</th>
     <!--Seção 1 da tabela-->
     <tr>
-      <td rowspan="6">/</td>
-      <td>/</td>
-      <td rowspan="6">/</td>
-      <td>/</td>
+      <td rowspan="5">Notebooks</td>
+      <td>Marcas</td>
+      <td rowspan="5">Mídias</td>
+      <td>Tipos</td>
     </tr>
     <tr>
-      <td>/</td>
-      <td>/</td>
+      <td>Samsung</td>
+      <td>HD Externo</td>
     </tr>
     <tr>
-      <td>/</td>
-      <td>/</td>
+      <td>Dell</td>
+      <td>HD Interno</td>
     </tr>
     <tr>
-      <td>/</td>
-      <td>/</td>
+      <td>Apple</td>
+      <td>Pendrive</td>
     </tr>
     <tr>
-      <td>/</td>
-      <td>/</td>
-    </tr>
-    <tr>
-      <td>/</td>
-      <td>/</td>
+      <td>Positivo</td>
+      <td>SSD 256 GB</td>
     </tr>
     <!--Seção 2 da tabela-->
     <tr>
-      <td rowspan="6">/</td>
-      <td>/</td>
-      <td rowspan="6">/</td>
-      <td>/</td>
+      <td rowspan="4">Tela em "</td>
+      <td>14</td>
+      <td rowspan="4">Impressoras</td>
+      <td>HP</td>
     </tr>
     <tr>
-      <td>/</td>
-      <td>/</td>
+      <td>15</td>
+      <td>Samsung</td>
     </tr>
     <tr>
-      <td>/</td>
-      <td>/</td>
+      <td>22</td>
+      <td>Epson</td>
     </tr>
     <tr>
-      <td>/</td>
-      <td>/</td>
-    </tr>
-    <tr>
-      <td>/</td>
-      <td>/</td>
-    </tr>
-    <tr>
-      <td>/</td>
-      <td>/</td>
+      <td>48</td>
+      <td>Lexmax</td>
     </tr>
 
 </body>
