--- a/questao02.html
+++ b/questao02.html
@@ -15,6 +15,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shopping da Informática S.A</title>
 
+  <style>
+    body {
+      font: normal 16px Arial;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 32px;
+    }
+
+    table {
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .cell-color-y {
+      background-color: darkorange;
+    }
+
+    .cell-color-g {
+      background-color: seagreen;
+    }
+  </style>
+
 </head>
 
 <body>
@@ -23,49 +47,51 @@
     <h1>Shopping da Informática S.A</h1>
   </header>
 
-  <table class="txt-center" border="1" cellpadding="10" bordercolor="#ffffff" summary="Tabela com itens da loja">
-    <th colspan="4">Shopping da Informática S.A</th>
-    <!--Seção 1 da tabela-->
-    <tr>
-      <td rowspan="5">Notebooks</td>
-      <td>Marcas</td>
-      <td rowspan="5">Mídias</td>
-      <td>Tipos</td>
-    </tr>
-    <tr>
-      <td>Samsung</td>
-      <td>HD Externo</td>
-    </tr>
-    <tr>
-      <td>Dell</td>
-      <td>HD Interno</td>
-    </tr>
-    <tr>
-      <td>Apple</td>
-      <td>Pendrive</td>
-    </tr>
-    <tr>
-      <td>Positivo</td>
-      <td>SSD 256 GB</td>
-    </tr>
-    <!--Seção 2 da tabela-->
-    <tr>
-      <td rowspan="4">Tela em "</td>
-      <td>14</td>
-      <td rowspan="4">Impressoras</td>
-      <td>HP</td>
-    </tr>
-    <tr>
-      <td>15</td>
-      <td>Samsung</td>
-    </tr>
-    <tr>
-      <td>22</td>
-      <td>Epson</td>
-    </tr>
-    <tr>
-      <td>48</td>
-      <td>Lexmax</td>
-    </tr>
+  <section>
+    <table border="1" cellspacing="0" cellpadding="8" bordercolor="#dddddd" summary="Tabela com itens da loja">
+      <th colspan="4">Shopping da Informática S.A</th>
+      <!--Seção 1 da tabela-->
+      <tr>
+        <th class="cell-color-y" rowspan="5">Notebooks</th>
+        <td>Marcas</td>
+        <th class="cell-color-g" rowspan="5">Mídias</th>
+        <td>Tipos</td>
+      </tr>
+      <tr>
+        <td>Samsung</td>
+        <td>HD Externo</td>
+      </tr>
+      <tr>
+        <td>Dell</td>
+        <td>HD Interno</td>
+      </tr>
+      <tr>
+        <td>Apple</td>
+        <td>Pendrive</td>
+      </tr>
+      <tr>
+        <td>Positivo</td>
+        <td>SSD 256 GB</td>
+      </tr>
+      <!--Seção 2 da tabela-->
+      <tr>
+        <th class="cell-color-y" rowspan="4">Tela em "</th>
+        <td>14</td>
+        <th class="cell-color-g" rowspan="4">Impressoras</th>
+        <td>HP</td>
+      </tr>
+      <tr>
+        <td>15</td>
+        <td>Samsung</td>
+      </tr>
+      <tr>
+        <td>22</td>
+        <td>Epson</td>
+      </tr>
+      <tr>
+        <td>48</td>
+        <td>Lexmax</td>
+      </tr>
+  </section>
 
 </body>
