Alteração de cores

--- a/questao02.html
+++ b/questao02.html
@@ -30,13 +30,6 @@
       margin-right: auto;
     }
 
-    .cell-color-y {
-      background-color: darkorange;
-    }
-
-    .cell-color-g {
-      background-color: seagreen;
-    }
   </style>
 
 </head>
@@ -52,9 +45,9 @@
       <th colspan="4">Shopping da Informática S.A</th>
       <!--Seção 1 da tabela-->
       <tr>
-        <th class="cell-color-y" rowspan="5">Notebooks</th>
+        <th rowspan="5" bgcolor="#fcf5ee">Notebooks</th>
         <td>Marcas</td>
-        <th class="cell-color-g" rowspan="5">Mídias</th>
+        <th rowspan="5" bgcolor="#eeeeee">Mídias</th>
         <td>Tipos</td>
       </tr>
       <tr>
@@ -75,9 +68,9 @@
       </tr>
       <!--Seção 2 da tabela-->
       <tr>
-        <th class="cell-color-y" rowspan="4">Tela em "</th>
+        <th rowspan="4" bgcolor="#fcf5ee">Tela em "</th>
         <td>14</td>
-        <th class="cell-color-g" rowspan="4">Impressoras</th>
+        <th rowspan="4" bgcolor="#eeeeee">Impressoras</th>
         <td>HP</td>
       </tr>
       <tr>
