Alinhamento dos ítens da tabela

--- a/questao02.html
+++ b/questao02.html
@@ -18,11 +18,12 @@
   <style>
     body {
       font: normal 16px Arial;
-      text-align: center;
+      font-weight: bold;
     }
 
-    h1 {
+    h2 {
       font-size: 32px;
+      text-align: center;
     }
 
     table {
@@ -36,7 +37,7 @@
 <body>
 
   <header>
-    <h1>Shopping da Informática S.A</h1>
+    <h2>Shopping da Informática S.A</h2>
   </header>
 
   <section>
@@ -44,45 +45,45 @@
       <th colspan="4">Shopping da Informática S.A</th>
       <!--Seção 1 da tabela-->
       <tr>
-        <th rowspan="5" bgcolor="#fcf5ee">Notebooks</th>
-        <td>Marcas</td>
-        <th rowspan="5" bgcolor="#eeeeee">Mídias</th>
-        <td>Tipos</td>
+        <td align="center" rowspan="5" bgcolor="#fcf5ee">Notebooks</td>
+        <td align="center">Marcas</td>
+        <td align="center" rowspan="5" bgcolor="#eeeeee">Mídias</td>
+        <td align="center">Tipos</td>
       </tr>
       <tr>
-        <td>Samsung</td>
-        <td>HD Externo</td>
+        <td align="center">Samsung</td>
+        <td align="center">HD Externo</td>
       </tr>
       <tr>
-        <td>Dell</td>
-        <td>HD Interno</td>
+        <td align="center">Dell</td>
+        <td align="center">HD Interno</td>
       </tr>
       <tr>
-        <td>Apple</td>
-        <td>Pendrive</td>
+        <td align="center">Apple</td>
+        <td align="center">Pendrive</td>
       </tr>
       <tr>
-        <td>Positivo</td>
-        <td>SSD 256 GB</td>
+        <td align="center">Positivo</td>
+        <td align="center">SSD 256 GB</td>
       </tr>
       <!--Seção 2 da tabela-->
       <tr>
-        <th rowspan="4" bgcolor="#fcf5ee">Tela em "</th>
-        <td>14</td>
-        <th rowspan="4" bgcolor="#eeeeee">Impressoras</th>
-        <td>HP</td>
+        <td align="center" rowspan="4" bgcolor="#fcf5ee">Tela em "</td>
+        <td align="center">14</td>
+        <td align="center" rowspan="4" bgcolor="#eeeeee">Impressoras</td>
+        <td align="center">HP</td>
       </tr>
       <tr>
-        <td>15</td>
-        <td>Samsung</td>
+        <td align="center">15</td>
+        <td align="center">Samsung</td>
       </tr>
       <tr>
-        <td>22</td>
-        <td>Epson</td>
+        <td align="center">22</td>
+        <td align="center">Epson</td>
       </tr>
       <tr>
-        <td>48</td>
-        <td>Lexmax</td>
+        <td align="center">48</td>
+        <td align="center">Lexmax</td>
       </tr>
   </section>
 
