Atualização das cores

--- a/questao02.html
+++ b/questao02.html
@@ -41,13 +41,13 @@
   </header>
 
   <section>
-    <table border="1" cellspacing="0" cellpadding="8" bordercolor="#dddddd" summary="Tabela com itens da loja">
+    <table border="1" cellspacing="0" cellpadding="8" bordercolor="#e8e8e8" summary="Tabela com itens da loja">
       <th colspan="4">Shopping da Informática S.A</th>
       <!--Seção 1 da tabela-->
       <tr>
-        <td align="center" rowspan="5" bgcolor="#fcf5ee">Notebooks</td>
+        <td align="center" rowspan="5" bgcolor="#ffcc29">Notebooks</td>
         <td align="center">Marcas</td>
-        <td align="center" rowspan="5" bgcolor="#eeeeee">Mídias</td>
+        <td align="center" rowspan="5" bgcolor="#81b214">Mídias</td>
         <td align="center">Tipos</td>
       </tr>
       <tr>
@@ -68,9 +68,9 @@
       </tr>
       <!--Seção 2 da tabela-->
       <tr>
-        <td align="center" rowspan="4" bgcolor="#fcf5ee">Tela em "</td>
+        <td align="center" rowspan="4" bgcolor="#81b214">Tela em "</td>
         <td align="center">14</td>
-        <td align="center" rowspan="4" bgcolor="#eeeeee">Impressoras</td>
+        <td align="center" rowspan="4" bgcolor="#ffcc29">Impressoras</td>
         <td align="center">HP</td>
       </tr>
       <tr>
