--- a/questao03.html
+++ b/questao03.html
@@ -1,5 +1,5 @@
 <!--
-Questão 01
+Questão 03
 IFCE - Instituto Federal do Ceará - Campus Tianguá-CE
 Nome: Arântia Mota;  Danilo Cardoso;  José Almir
 Disciplina: Desenvolvimento Web
@@ -8,20 +8,19 @@ Disciplina: Desenvolvimento Web
 <html>
   <head>
     <title>Questão 03</title>
-    <meta charset="utf-8" />
     </style>
   </head>
   <body>
     <form>
-      <table style="background-color: mintcream;">
-        <thead style="background-color: lightskyblue;">
+      <table bgcolor="mintcream">
+        <thead bgcolor="lightskyblue">
           <tr>
-            <td colspan="6"><h3 style="text-align: center;">Cadastro de Alunos</h3></td>
+            <td colspan="6"><h3 align="center">Cadastro de Alunos</h3></td>
           </tr>
         </thead>
         <tr>
           <td>Nome:</td>
-          <td><input type="text"  name="nome"/></td>
+          <td><input type="text" name="nome"/></td>
           <td>Idade:</td>
           <td><input type="text" name="idade"/></td>
           <td>Sexo:</td>
