Remoção de meta tags e CSS

--- a/questao02.html
+++ b/questao02.html
@@ -6,43 +6,18 @@
   7º Semestre (Bacharelado em Ciência da Computação) - 2021.1 
 -->
 
-<!DOCTYPE html>
-<html lang="pt-br">
+<html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shopping da Informática S.A</title>
-
-  <style>
-    body {
-      font: normal 16px Arial;
-      font-weight: bold;
-    }
-
-    h2 {
-      font-size: 32px;
-      text-align: center;
-    }
-
-    table {
-      margin-left: auto;
-      margin-right: auto;
-    }
-  </style>
-
 </head>
 
 <body>
-
-  <header>
-    <h2>Shopping da Informática S.A</h2>
-  </header>
-
   <section>
     <table border="1" cellspacing="0" cellpadding="8" bordercolor="#e8e8e8" summary="Tabela com itens da loja">
-      <th colspan="4">Shopping da Informática S.A</th>
+      <th colspan="4">
+        <h2>Shopping da Informática S.A</h2>
+      </th>
       <!--Seção 1 da tabela-->
       <tr>
         <td align="center" rowspan="5" bgcolor="#ffcc29">Notebooks</td>
@@ -87,5 +62,6 @@
       </tr>
     </table>
   </section>
-
 </body>
+
+</html>
