Alteração de cores e adição de conteúdo

--- a/questao01/atendimento.html
+++ b/questao01/atendimento.html
@@ -1,2 +1,27 @@
 <h1>Central de atendimento</h1>
-<a href="contato.html" target="info">Entre em contato</a>
+<a href="contato.html" target="info">Fale agora com um de nossos atendentes</a>
+<h1>FAQ</h1>
+<h3>1) Como e onde encontrar x informações?</h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur orci finibus ipsum finibus, vitae lacinia
+    mauris placerat. Aenean tincidunt aliquam eros, ut vestibulum lorem euismod ac. Aliquam erat volutpat. Nulla
+    fermentum pulvinar tellus quis interdum. Praesent at est eleifend magna viverra interdum. Nam arcu leo, pulvinar sit
+    amet lorem vel, laoreet viverra arcu. Nam imperdiet libero sit amet orci maximus auctor. Integer a massa a augue
+    ultricies hendrerit.</p>
+<h3>2) Como devolver um produto comprado?</h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempor nulla quis orci rutrum, ut tempus turpis
+    scelerisque. Integer porttitor pharetra eleifend. Praesent maximus pharetra libero. Aliquam nec dolor aliquam,
+    tempus risus at, fringilla magna. Donec blandit, ex eget euismod convallis, turpis eros euismod quam, a rutrum metus
+    ex laoreet risus. Aliquam erat volutpat. Etiam consectetur scelerisque purus vitae ornare.
+
+    Nunc maximus magna nibh, sit amet interdum arcu accumsan sed. Aenean posuere metus sit amet ante maximus, vel
+    aliquam eros ultrices. Sed id tristique mi, vitae rutrum nisl. Donec eu purus et nisl imperdiet sagittis vel et
+    metus. Ut tempus erat nisi, sit amet ultricies risus venenatis in. Suspendisse non dolor non tellus aliquam aliquet
+    sed ac enim. Aenean posuere laoreet ex a malesuada. Sed ac pellentesque sapien, sed volutpat ipsum.</p>
+<h3>3) Quais as formas de pagamento disponíveis?</h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat nisl euismod, fringilla lacus ac, sollicitudin
+    nisl. Suspendisse potenti. Suspendisse interdum velit vitae elit euismod efficitur. Duis auctor rutrum nisi id
+    sollicitudin. Morbi dapibus lorem sed est placerat, sollicitudin lobortis lacus bibendum. Morbi sit amet velit nunc.
+    Praesent efficitur pellentesque ante id imperdiet. Duis ullamcorper posuere neque, ac vestibulum augue iaculis sit
+    amet. Fusce mi purus, condimentum non euismod ut, feugiat eu lorem. Sed ultrices elit orci, ac rutrum ex sodales
+    fermentum. Proin condimentum lorem fermentum tempus eleifend. Ut in tempor erat, non gravida nunc. Nam eleifend urna
+    in sapien egestas suscipit.</p>
