--- a/questao01/questao01.html
+++ b/questao01/questao01.html
@@ -1,9 +1,10 @@
 <html>
-	<frameset rows="80%,*">
-        <frameset cols="20%, *">
-			<frame src="menu.html" noresize>
+<frameset border="0" frameborder="0" framespacing="0" rows="80%,*">
+	<frameset cols="20%, *">
+		<frame src="menu.html" noresize>
 			<frame src="produtos.html" noresize name="info">
-        </frameset>
-       	<frame src="rodape.html" noresize>
-    </frameset>
+	</frameset>
+	<frame src="rodape.html" noresize>
+</frameset>
+
 </html>
