--- a/questao01/rodape.html
+++ b/questao01/rodape.html
@@ -1,9 +1,7 @@
-<body bgcolor="0a6b24">
+<body bgcolor="#655c56">
 	<ul>
 		<li><a href="contato.html" target="info">Contato</a></li>
 		<li><a href="sobre.html" target="info">Sobre Nós</a></li>
 		<li><a href="atendimento.html" target="info">Central de Atendimento</a></li>
 	</ul>
 </body>
-
-	
