--- a/questao01/selariaMontaria.html
+++ b/questao01/selariaMontaria.html
@@ -1,5 +1,19 @@
-<body background="red">
-	<img src="https://images.tcdn.com.br/img/img_prod/646215/cabecada_orelha_basica_pesponto_cowboys_3669_1_20201214094255.jpg" width="210px">
-	<h5>Cabeçada Orelha</h5>
-	<h6>R$ 45,00</h6>
+<body>
+	<section>
+		<div>
+			<img src="https://cdn.pixabay.com/photo/2017/09/11/13/01/hat-2738831_960_720.png" width="200px">
+			<h3>Chapéu vaqueiro</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin risus enim, iaculis ac vehicula in,
+				accumsan sed mauris. Cras ligula.</p>
+			<h4>R$ 60,00</h4>
+		</div>
+		<div>
+			<img src="https://images.tcdn.com.br/img/img_prod/646215/cabecada_orelha_basica_pesponto_cowboys_3669_1_20201214094255.jpg"
+				width="200px">
+			<h3>Cabeçada Orelha</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mollis urna vitae tempus tincidunt.
+				Vivamus ultrices orci tortor, non elementum.</p>
+			<h4>R$ 45,00</h4>
+		</div>
+	</section>
 </body>
