Diminuição do tamanho do texto do conteúdo

--- a/questao01/pragasUrbanas.html
+++ b/questao01/pragasUrbanas.html
@@ -4,17 +4,24 @@
 </head>
 
 <body>
-	<img src="https://io2.convertiez.com.br/m/lojaagropecuaria/shop/products/images/1091/big/formicida-grao-verde-50-gr-caixa-com-20-kg_186163.jpg"
-		width="200px">
-	<h3>Formicida Grão Verde</h3>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque laoreet.</p>
-	<h4>R$ 5,76</h4>
-	<img src="https://static3.tcdn.com.br/img/img_prod/350075/forth_formicida_gel_seringa_10g_5145_1_20190521161556.jpg"
-		width="200px">
-	<h3>Formicida Gel Forth</h3>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent rutrum placerat lectus, nec scelerisque nisi.
-	</p>
-	<h4>R$ 25,00</h4>
+	<section>
+		<div>
+			<img src="https://io2.convertiez.com.br/m/lojaagropecuaria/shop/products/images/1091/big/formicida-grao-verde-50-gr-caixa-com-20-kg_186163.jpg"
+				width="200px">
+			<h3>Formicida Grão Verde</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque laoreet.</p>
+			<h4>R$ 5,76</h4>
+		</div>
+		<div>
+			<img src="https://static3.tcdn.com.br/img/img_prod/350075/forth_formicida_gel_seringa_10g_5145_1_20190521161556.jpg"
+				width="200px">
+			<h3>Formicida Gel Forth</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent rutrum placerat lectus, nec scelerisque
+				nisi.
+			</p>
+			<h4>R$ 25,00</h4>
+		</div>
+	</section>
 </body>
 
 </html>
