--- a/questao01/selariaMontaria.html
+++ b/questao01/selariaMontaria.html
@@ -2,7 +2,7 @@
 	<section>
 		<div>
 			<img src="https://cdn.pixabay.com/photo/2017/09/11/13/01/hat-2738831_960_720.png" width="200px">
-			<h3>Chapéu vaqueiro</h3>
+			<h3>Chapéu de Vaqueiro</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin risus enim, iaculis ac vehicula in,
 				accumsan sed mauris. Cras ligula.</p>
 			<h4>R$ 60,00</h4>
